--- a/Compass/package.json
+++ b/Compass/package.json
@@ -10,20 +10,21 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10",
     "react-router-native": "^6.26.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.5",
-    "@types/react-native": "^0.73.0",
-    "typescript": "^5.5.4"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
